_sass/_layout.scss
/* Site header */
.site-header {
  border-bottom: 1px solid $base2;
  min-height: $spacing-unit * 3;
}

.site-title {	
  font-size: $base-font-size * 1.25;

  line-height: $spacing-unit * 3;
  margin-bottom: 0;
}

.site-nav {
  float: right;
  line-height: $spacing-unit * 3;

  .page-link {
  	display: inline-block;
    margin: 0;
    padding: 0 ($spacing-unit / 2);
    
    &:hover {
      background-color: $base2;
    }
  }
}

/* About me on the home page */
.about-excerpt, .portfolio-head {
  
  border-bottom: 2px solid $base2;
  margin: ($spacing-unit * 2) 0;
  
  p {
    max-width: ($on-laptop + ($spacing-unit * 2)) / 1.618;
    text-align: center;
    margin: 0 auto ($spacing-unit * 2);
  }
}

/* Site footer */
.site-footer {
  border-top: 1px solid $base2;
  padding: $spacing-unit 0;
}

.footer-list {
  display: inline;
  margin: 0;
  list-style: none;
  
  li {
    float: left;
    margin-right: $spacing-unit / 4;
  }
}

.post-list {
  margin: 0;
  list-style: none;

  > li {
    border-bottom: 1px solid $base2;
    margin-top: $spacing-unit * 2;
    
    img { margin-bottom: $spacing-unit; }
    
    p { margin-bottom: $spacing-unit * 2; }
  }
}

.button {
  display: inline-block;
  background-color: $blue;
  color: #fff;
  padding: 0 $spacing-unit;
  border-radius: 4px;
  line-height: $spacing-unit * 3;
  margin: ($spacing-unit * 2) 0;
  
  &:visited { background-color: $blue; }
}

.post-link {
  display: block;
  line-height: 1;
  margin-bottom: $spacing-unit;
}

/* Posts */
.post-header { 
  margin: ($spacing-unit * 2) 0;
  border-bottom: 2px solid $base2;
  
  h1 { margin-bottom: ($spacing-unit * 2); }
}

.post-content { margin: ($spacing-unit * 2) 0; }

